issues fixed of some pages like Home page 'Why Choose Us' was align on left side make it on center and in team make image of CEO was not looking good according to width and height make it suitable.

--- a/src/theme/globals.css
+++ b/src/theme/globals.css
@@ -61,12 +61,6 @@ body {
 
 }
 
-.image-hover {
-  /* width: 100%; */
-  /* height: auto; */
-  transition: opacity 0.3s ease-in-out;
-
-}
 
 .hover-text {
   color: rgba(121, 198, 217, 0.299);
